<resources>
    <string name="app_name">GreenID</string>
    <string name="app_background">App Background</string>
    <string name="app_logo">GreenID Logo</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_new_post">New Post</string>
    <string name="menu_user">User Name</string>
    <string name="menu_notifications">Notifications</string>

    //New Strings

    //Profile
    <string name="FollowersVal">FollowersVal</string>
    <string name="FollowingVal">FollowingVal</string>
    <string name="Followers">Followers</string>
    <string name="Following">Following</string>
    <string name="Follow">Follow</string>
    <string name="pfName">User Name</string>
    <string name="pfRank">User Rank</string>
    <string name="pfBio">User Biography</string>
    <string name="greenidtitle">GreenID Score</string>
    <string name="greenidex">Your "GreenID Score" is based on the points that you receive by getting rewarded in your posts.</string>
    <string name="impactful"> "Impactful" gives you 15 points.</string>
    <string name="ecoideia"> "Ecoideia" gives you 10 points.</string>


    //Dashboard
    <string name="Location">Location</string>
    <string name="LikesVal">0</string>
    <string name="CommentsVal">0</string>

    //Search
    <string name="SearchKeywords">Search other users...</string>
    <string name="Caption">Caption</string>
    <string name="Hashtag">Hashtag</string>
    <string name="calendar"> Event Calendar</string>

    //Settings
    <string name="settings">Settings</string>
    <string name="profile">Change Profile</string>
    <string name="editPfp">Edit Profile</string>
    <string name="delete">Delete Account</string>
    <string name="darkmode">Dark Mode</string>
    <string name="logout">Log Out</string>
    <string name="clear">Clear App Data</string>

    //LoginCredentials
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="SignTxtBtn">Not a member yet? Sign in.</string>

    //Notifications
    <string name="CommentValue">Comment Value</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Favorites
    <string name="favorites">Favorites</string>
    <string name="post">Post</string>
    <string name="event">Event</string>
    <string name="product">Product</string>
    <string name="week">This Week</string>
    <string name="month">This Month</string>
    <string name="earlier">Earlier</string>

    //Publish
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="Post">Post</string>
    <string name="Event">Event</string>
    <string name="Product">Product</string>
    <string name="Publish">Publish</string>

    //Edit Profile
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="bio">Bio</string>

    //New Post
    <string name="descriptionInput">Type a description for your post here.</string>
    <string name="locationTxt">Type the location of your post here (optional).</string>
    <string name="date">Date</string>
    <string name="descri"> Type a description here.</string>
    <string name="loca"> Type the location here (optional).</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="Comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="posttxt">Post</string>
    <string name="eventtxt">Event</string>
    <string name="producttxt">Product</string>

</resources>