<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginCredentialsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:background="@drawable/greenid_login_logo" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/logo"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/input_box"
        android:text="@string/Email"
        android:textAlignment="center"
        android:textColor="@color/light_txt"
        android:textSize="40px"/>

    <EditText
        android:id="@+id/passTxt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/emailTxt"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/input_box"
        android:text="@string/Password"
        android:textAlignment="center"
        android:textColor="@color/light_txt"
        android:textSize="40px"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/passTxt"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/Login"
        android:background="@drawable/btn_login"
        android:textSize="40px"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:text="@string/SignTxtBtn"
        android:textSize="30px"
        android:textColor="@color/black_txt"
        />


</RelativeLayout>