<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Favorites">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_main"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_menu_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#fff" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/favorites"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/postbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_toolbar"
            android:background="@drawable/btnfav"
            android:text="@string/post"
            android:textColor="@color/green_main"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableLeft="@drawable/post"
            android:drawableTint="@color/green_main"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="12dp"
            />

        <Button
            android:id="@+id/eventbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_toolbar"
            android:background="@drawable/btnfav"
            android:layout_toRightOf="@+id/postbtn"
            android:text="@string/event"
            android:textColor="@color/green_main"
            android:textSize="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableLeft="@drawable/event"
            android:drawableTint="@color/green_main"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <Button
            android:id="@+id/productbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_toolbar"
            android:background="@drawable/btnfav"
            android:layout_toRightOf="@+id/eventbtn"
            android:text="@string/product"
            android:textColor="@color/green_main"
            android:textSize="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableLeft="@drawable/product"
            android:drawableTint="@color/green_main"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            />

        <TextView
            android:id="@+id/weektxt"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postbtn"
            android:text="@string/week"
            android:textColor="@color/green_main"
            android:textStyle="bold"
            android:textSize="25dp"
            />

        <TextView
            android:id="@+id/monthtxt"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postbtn"
            android:layout_toRightOf="@id/weektxt"
            android:text="@string/month"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:textSize="15dp"
            />

        <TextView
            android:id="@+id/earliertxt"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/postbtn"
            android:layout_toRightOf="@id/monthtxt"
            android:text="@string/earlier"
            android:textColor="@color/dark_grey"
            android:textStyle="bold"
            android:textSize="15dp"
            />




    </RelativeLayout>

</RelativeLayout>