<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".User">



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_main"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_menu_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#fff" />

        <TextView
            android:id="@+id/userNameTop_Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/menu_user"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12.5dp"
            android:background="@drawable/arrow_back" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/pfp"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_below="@id/main_toolbar"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:civ_border_width="2dp" />


        <RelativeLayout
            android:id="@+id/pfStats"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/main_toolbar"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/pfp">

            <TextView
                android:id="@+id/followersVal_Check"
                android:layout_width="112dp"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:text="@string/FollowersVal"
                android:textAlignment="center"
                android:textColor="@color/black_txt"
                android:textSize="40px" />

            <TextView
                android:id="@+id/followingVal_Check"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="48dp"
                android:layout_toEndOf="@+id/followersVal_Check"
                android:text="@string/FollowingVal"
                android:textAlignment="center"
                android:textColor="@color/black_txt"
                android:textSize="40px" />

            <TextView
                android:id="@+id/followers"
                android:layout_width="64dp"
                android:layout_height="30dp"
                android:layout_below="@+id/followersVal_Check"
                android:layout_marginStart="48dp"
                android:text="@string/Followers"
                android:textAlignment="center"
                android:textColor="@color/light_txt"
                android:textSize="35px" />

            <TextView
                android:id="@+id/following"
                android:layout_width="64dp"
                android:layout_height="30dp"
                android:layout_below="@+id/followingVal_Check"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="56dp"
                android:layout_toRightOf="@+id/followers"
                android:text="@string/Following"
                android:textAlignment="center"
                android:textColor="@color/light_txt"
                android:textSize="35px" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnView"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_below="@id/pfStats"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/pfp">

            <Button
                android:id="@+id/btnFollow"
                android:layout_width="128dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btnbox"
                android:text="@string/Follow"
                android:textSize="40px" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bioView"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_below="@+id/pfp">

            <TextView
                android:id="@+id/pfName_Check"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/pfName"
                android:textColor="@color/black_txt"
                android:textSize="40px"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userRank"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_toRightOf="@+id/pfName_Check"
                android:text="@string/pfRank"
                android:textColor="@color/black_txt"
                android:textSize="40px" />

            <TextView
                android:id="@+id/bio_Check"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_below="@id/pfName_Check"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pfBio"
                android:enabled="true"
                android:longClickable="true"
                android:linksClickable="true"
                android:autoLink="all"
                android:textColorLink="@color/dark_gray_txt"
                android:textIsSelectable="true"
                android:focusable="true"
                android:textColor="@color/black_txt"
                android:textSize="35px" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/badgeView"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/bioView">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/line" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/imgGridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/badgeView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imgGridRv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="56dp"
                android:background="@color/light_txt"

                />

        </RelativeLayout>


    </RelativeLayout>

</RelativeLayout>