<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".User">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/menu_main"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/menu_navigation" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_menu_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#fff" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn1"
            android:layout_below="@id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btnwhite"
            android:textSize="20sp"
            android:text="@string/profile"
            android:textColor="@color/green_main" />

        <Button
            android:id="@+id/btn2"
            android:layout_below="@id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btnwhite"
            android:textSize="20sp"
            android:text="@string/username"
            android:textColor="@color/green_main" />

        <Button
            android:id="@+id/btn3"
            android:layout_below="@id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btnwhite"
            android:textSize="20sp"
            android:text="@string/password"
            android:textColor="@color/green_main" />

        <Button
            android:id="@+id/btn4"
            android:layout_below="@id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btnwhite"
            android:textSize="20sp"
            android:text="@string/darkmode"
            android:textColor="@color/green_main" />
        <Button
            android:id="@+id/btn5"
            android:layout_below="@id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btnwhite"
            android:textSize="20sp"
            android:text="@string/logout"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>

</RelativeLayout>