<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewPost">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:background="@drawable/menu_main"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        app:labelVisibilityMode="unlabeled"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top_menu_bg"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="#fff" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dp"
            android:text="@string/menu_new_post"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/main_toolbar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/main_toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="100dp"
            android:layout_height="44dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="304dp"
            android:background="@drawable/btnwhite"
            android:text="@string/Publish"
            android:textStyle="bold"
            android:textColor="@color/icon_green"
            android:padding="2dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/selected_pic_view"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="56dp">

        <androidx.cardview.widget.CardView
            android:layout_width="372dp"
            android:layout_height="340dp"
            android:layout_centerInParent="true"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/white">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selected_pic_view"
        android:padding="24dp">

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/description"
            android:textColor="@color/light_txt"
            android:textSize="40px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/description_tv"
            android:backgroundTint="@color/light_txt"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"
            android:layout_below="@+id/description_et"
            android:text="@string/location"
            android:textColor="@color/light_txt"
            android:textSize="40px"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/location_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/location_tv"
            android:backgroundTint="@color/light_txt"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_type"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/post_info">

        <Button
            android:id="@+id/post_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/event_btn"
            android:layout_marginEnd="8dp"
            android:text="@string/post"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/event_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/event"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/product_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/event_btn"
            android:layout_marginStart="8dp"
            android:text="@string/product"
            android:layout_centerVertical="true"
            android:background="@drawable/rounded_button"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold" />
    </RelativeLayout>
</RelativeLayout>